--- a/frontend/index.html
+++ b/frontend/index.html
@@ -421,7 +421,7 @@ function extractSkillsFromBio() {
     showNotification('Skills extracted from your bio!', 'info');
 }
 
-        const API_BASE = window.location.origin + '/api';
+        const API_BASE = 'https://jobsplus-app.onrender.com' + '/api';
         let currentFilters = {};
         
         document.addEventListener('DOMContentLoaded', function() {
